--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
+    "lorem-ipsum": "^1.0.4",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grits": "0.0.4",
+    "react-panelgroup": "^1.0.5",
     "react-redux": "^5.0.6",
     "react-split-pane": "^0.1.74",
     "redux": "^3.7.2",
