build docs, Readme

--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,11 @@
   "presets": [
     ["env", {
       "modules": "commonjs"
-    }]
+    }],
+    "react"
   ],
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "babel-plugin-transform-class-properties"
   ]
 }
